It is now possible to play a game using sockets